# k2c-hackathon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yaml  fnox.toml  mise.toml
k2c-agents/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
k2c-agents/migrations/: 000001_create_tables.down.sql  000001_create_tables.up.sql
k2c-agents/src/k2c_agents/: config.py  db.py  lead_server.py  schemas.py  server.py  storage.py
k2c-agents/src/k2c_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k2c-agents/src/k2c_agents/agents/: evaluation_manager.py  lead_agent.py  llm.py  preprocess_manager.py
k2c-agents/tests/http/: config.http  event-json.http  event-multipart.http  health.http  lead.http
k2c-collector/: Dockerfile  pyproject.toml  test_server.py
k2c-collector/screenshot-client/: .env.example  .gitignore  pyproject.toml  test_server.py
k2c-collector/screenshot-client/src/: __init__.py  capture.py  config.py  upload.py
k2c-collector/src/: __main__.py  config.py  upload.py
k2c-collector/tests/: test_capture.py  test_config.py  test_upload.py
k2c-dashboard/: Dockerfile  package-lock.json  package.json
k2c-dashboard/src/app/: page.tsx
k2c-dashboard/src/app/api/evaluation/: route.ts
k2c-dashboard/src/app/api/generate/: route.ts
k2c-dashboard/src/app/api/graph/: route.ts
k2c-dashboard/src/components/: registry.tsx
k2c-dashboard/src/lib/: catalog.ts  db.ts
k2c-indexer/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
k2c-indexer/migrations/: 000001_create_index_jobs.up.sql
k2c-indexer/src/k2c_indexer/: __init__.py  agent.py  config.py  db.py  schemas.py  server.py
k2c-indexer/src/k2c_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k2c-indexer/tests/httpyac/: indexer.http
migrations/: 000001_create_tables.down.sql  000001_create_tables.up.sql  000002_create_index_jobs.down.sql
