[project]
name = "k2c-agents"
version = "0.1.0"
description = "k2c-agents services and agents for k2c-hackathon"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.2",
  "minio>=7.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "openai-agents>=0.6.0",
]

[project.scripts]
k2c-preprocess-server = "k2c_agents.server:run"
k2c-preprocess-agent = "k2c_agents.agents.preprocess_manager:run"
k2c-eval-agent = "k2c_agents.agents.evaluation_manager:run"
k2c-lead-agent = "k2c_agents.agents.lead_agent:run"
k2c-lead-server = "k2c_agents.lead_server:run"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
