[project]
name = "k2c-indexer"
version = "0.1.0"
description = "k2c indexer service for knowledge graph"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.2",
  "neo4j>=5.26",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "openai-agents>=0.6.0",
]

[project.scripts]
k2c-indexer-server = "k2c_indexer.server:run"
k2c-indexer-agent = "k2c_indexer.agent:run"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
